[package]
name = "hnefatafl"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.42.0", features = ["full"] }
warp = { version = "0.3", features = ["tls"] }
async-stream = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
actix-web = "4.0"
uuid = { version = "1.11.0", features = ["v4"]}
rand = "0.8"